[tool.poetry]
name = "bro"
version = "0.1.0"
description = ""
authors = ["Nicolò Boschi <boschi1997@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
pydantic = "<2"
openai = "^1.8.0"
fastapi = "^0.109.0"
langchain = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dockerize]
